--- a/BE_ERIC/build.gradle
+++ b/BE_ERIC/build.gradle
@@ -53,3 +53,9 @@ tasks.named('test') {
 //        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
 //    }
 //}
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.example.be_eric.BeEricApplication' // Thay "com.example.MainClass" bằng tên lớp chính của ứng dụng bạn
+    }
+}
