--- a/BE_ERIC/src/main/resources/application.properties
+++ b/BE_ERIC/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 # DATABASE
 # ===============================
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url= jdbc:mysql://localhost:3306/datn_shoeseric_v2?useSSL=false&useUnicode=true&characterEncoding=utf8&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.url= jdbc:mysql://103.197.185.34:3306/datn_shoeseric_v2?useSSL=false&useUnicode=true&characterEncoding=utf8&allowPublicKeyRetrieval=true
+spring.datasource.username=viet
+spring.datasource.password=1
 
 # ===============================
 # JPA / HIBERNATE
