--- a/FE_ERIC/package.json
+++ b/FE_ERIC/package.json
@@ -46,6 +46,7 @@
     "react-native-image-picker": "^5.3.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-onboarding-swiper": "^1.2.0",
     "react-native-paper": "^5.6.0",
     "react-native-popup-menu": "^0.16.1",
     "react-native-progress": "^5.0.0",
