--- a/FE_ERIC/app.json
+++ b/FE_ERIC/app.json
@@ -18,7 +18,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/splash.png",
         "backgroundColor": "#ffff"
       },
       "package": "com.cz2797delta.fe_eric"
